# chicago-crime-big-data

./: .gitignore  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml
src/: aggregate_data.py  app.py  clean_data.py  config.py  create_indexes.py  ingest_raw.py  models.py
tests/: test_aggregations.py  test_cleaning.py  test_models.py
