[project]
name = "chicago-crime-big-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.20.2",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pymongo>=4.17.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tqdm>=4.67.3",
]
